--- a/src/components/MemberArea/EditProfile.css
+++ b/src/components/MemberArea/EditProfile.css
@@ -55,6 +55,7 @@
   border: 1px solid #eee;
   width: 100%;
   display: flex;
+  align-items: center;
 }
 
 .edit-profile .channel-group.disabled {
@@ -67,7 +68,7 @@
 .edit-profile .channel-group i {
   font-size: 24px;
   color: #aaa;
-  padding: 6px 3px 0 4px;
+  padding: 0 3px 0 4px;
 }
 
 .edit-profile .channel-group input {
@@ -76,6 +77,5 @@
 }
 .edit-profile .channel-group label {
   color: #aaa;
-  padding: 7px 0;
   white-space: nowrap;
 }
