--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -89,14 +89,18 @@
 @media all and (max-width: 800px) {
   .modal-container .modal-box {
     padding: 5px;
+    margin: 0;
   }
+
   .modal-container.active .modal-box {
     margin: 5px auto;
   }
+
   .modal-container .modal-box .modal-head h2 {
     padding: 15px;
   }
+
   .modal-container .modal-box .modal-content {
-    padding: 5px 15px;
+    padding: 0;
   }
 }
