--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -42,7 +42,7 @@ body {
 
 .sidebar-nav li {
   margin-bottom: 10px;
-  color: #015d3e;
+  color: var(--link-color);
   text-decoration: none;
   cursor: pointer;
 }
