--- a/src/components/MemberArea/EditProfile.css
+++ b/src/components/MemberArea/EditProfile.css
@@ -98,6 +98,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  padding: 5px 0;
 }
 
 .edit-profile .channel-group.disabled {
@@ -115,7 +116,7 @@
 }
 
 .edit-profile .channel-group input {
-  padding-left: 0;
+  padding: 0;
   border: none;
   background: transparent;
 }
