Update toast colors

--- a/src/components/MemberArea/EditProfile.css
+++ b/src/components/MemberArea/EditProfile.css
@@ -22,7 +22,7 @@
 
 .edit-profile .form-submit .delete {
   float: right;
-  background: #aa0101;
+  background: var(--error-background);
 }
 
 .edit-profile .form-field {
