--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
   --mq-desktop: 801px;
   --button-dark-bg: #16385c;
   --link-color: #015d3e;
+  --success-background: #28a745;
+  --error-background: #dc3545;
 }
 
 html {
@@ -67,3 +69,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* #region toast overrides */
+.Toastify__toast--error {
+  background: var(--error-background);
+}
+
+.Toastify__toast--success {
+  background: var(--success-background);
+}
+/* #endregion */
