--- a/src/components/MemberArea/EditProfile.css
+++ b/src/components/MemberArea/EditProfile.css
@@ -33,7 +33,7 @@
 }
 
 .edit-profile .form-field .form-fields {
-  margin-top: calc(var(--elements-top-space) * -1);;
+  margin-top: calc(var(--elements-top-space) * -1);
 }
 
 .edit-profile .form-field .required .form-field-name::after {
@@ -43,7 +43,7 @@
 
 .edit-profile .form-field input,
 .edit-profile .form-field textarea {
-  padding: .67857143em 1em;
+  padding: 0.67857143em 1em;
 }
 
 .edit-profile .form-field input,
@@ -119,6 +119,7 @@
   padding: 0;
   border: none;
   background: transparent;
+  height: 25px;
 }
 
 .edit-profile .channel-group label {
