--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -3,8 +3,8 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   z-index: -1;
   opacity: 0;
   pointer-events: none;
@@ -19,7 +19,6 @@
 
 .modal-container .modal-box {
   background: #fff;
-  width: 780px;
   min-height: 100px;
   border-radius: 5px;
   margin: 300px auto;
@@ -30,7 +29,7 @@
 }
 
 .modal-container.active .modal-box {
-  margin: 100px auto;
+  margin: 0 auto;
   opacity: 1;
 }
 
