--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -6,8 +6,8 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   pointer-events: none;
   z-index: -1;
   opacity: 0;
@@ -24,7 +24,6 @@
   background: #fff;
   max-width: 780px;
   width: 95%;
-  max-height: 80vh;
   min-height: 100px;
   border-radius: 5px;
   margin: 300px auto;
@@ -34,7 +33,7 @@
   overflow: hidden;
 }
 
-@media all and (max-width: 576px) {
+@media all and (max-width: 800px) {
   .modal-container .modal-box {
     background: #fff;
     width: 99vw;
@@ -72,31 +71,36 @@
   color: #00bc89;
   letter-spacing: .05em;
   text-transform: uppercase;
-  padding: 25px;
-  margin: 0px;
+  padding: 0 25px 10px;
+  margin: 0;
 }
 .modal-container .modal-box .modal-content {
-  padding: 15px 25px 25px 25px;
+  padding: 15px 25px 0 25px;
   color: #000022;
   overflow: hidden;
 }
 .scroll-helper {
-  height: calc(80vh - 200px);
-  overflow-y: scroll;
-  margin: 0 auto 10px auto;
+  height: auto;
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
+  margin: 0 auto 10px;
 }
 
 @media all and (max-width: 800px) {
   .modal-container .modal-box {
     padding: 5px;
+    margin: 0;
   }
+
   .modal-container.active .modal-box {
     margin: 5px auto;
   }
+
   .modal-container .modal-box .modal-head h2 {
     padding: 15px;
   }
+
   .modal-container .modal-box .modal-content {
-    padding: 5px 15px;
+    padding: 0;
   }
 }
