--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,12 @@
   --tag-color: #6ad4b0;
   --filter-width: 265px;
 
-  --mq-mobile: 576px;
-  --mq-desktop: 577px;
+  --mq-mobile: 800px;
+  --mq-desktop: 801px;
+  --button-dark-bg: #16385c;
+  --link-color: #015d3e;
+  --success-background: #28a745;
+  --error-background: #dc3545;
 }
 
 html {
@@ -20,11 +24,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
-  line-height: 1.4285em;
 }
 
 *, :after, :before {
   box-sizing: border-box;
+}
+
+a {
+  color: var(--link-color);
+}
+
+button {
+  border: 0;
 }
 
 button, select {
@@ -58,3 +69,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* #region toast overrides */
+.Toastify__toast--error {
+  background: var(--error-background);
+}
+
+.Toastify__toast--success {
+  background: var(--success-background);
+}
+/* #endregion */
