--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -81,11 +81,11 @@
   color: hsl(0, 0%, 29%);
   font-size: 20px;
   margin: 0 0 5px;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .card .title {
-  word-break: break-all;
+  word-break: break-word;
   color: hsl(0, 0%, 29%);
   margin: 0 0 5px;
   font-weight: 400;
@@ -93,7 +93,7 @@
 
 .card .description {
   font-style: italic;
-  word-break: break-all;
+  word-break: break-word;
 
   color: #16385c;
   font-weight: 600;
