--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -49,6 +49,7 @@
   width: var(--avatar-dim);
   height: 118px;
   margin: calc(var(--avatar-offset) * -1) auto 0;
+  background: transparent;
 }
 
 .avatar:hover {
@@ -78,7 +79,7 @@
 }
 
 .card .avatar img.broken {
-  display: none !important;
+  visibility: hidden;
 }
 
 .card .name {
