feat #598: adds pagination to infinite scrolling

--- a/src/components/MentorsList/MentorList.css
+++ b/src/components/MentorsList/MentorList.css
@@ -33,6 +33,12 @@
 
 .mentors-cards .loader {
   font-size: 2em;
+  margin: 0 auto;
+}
+
+.mentors-cards .loader-wrapper {
+  width: 100%;
+  display: flex;
   margin-top: 15px;
 }
 
