Fix #629: Add validations for facbook, github and twitter username

--- a/src/components/MemberArea/EditProfile.css
+++ b/src/components/MemberArea/EditProfile.css
@@ -132,6 +132,11 @@
   margin: 5px 0;
 }
 
+.edit-profile .form-field .helper-text {
+  color: #aaa;
+  font-style: italic;
+}
+
 @media all and (max-width: 800px) {
   .edit-profile .form-fields {
     margin: 0;
