--- a/src/components/Switch/Switch.css
+++ b/src/components/Switch/Switch.css
@@ -12,7 +12,7 @@
   }
 }
 
-.switch-container > label {
+.filter-switch-label{
   background-color: #fff;
   text-transform: uppercase;
   color: #4a4a4a;
