--- a/src/components/Switch/Switch.css
+++ b/src/components/Switch/Switch.css
@@ -1,22 +1,6 @@
 .switch-container {
-  position: relative;
-  margin-top: 20px;
   display: flex;
-  padding-left: 18px;
   justify-content: space-between;
-}
-
-@media all and (max-width: 576px) {
-  .switch-container {
-    padding: 0 15px;
-  }
-}
-
-.filter-switch-label{
-  background-color: #fff;
-  text-transform: uppercase;
-  color: #4a4a4a;
-  font-weight: bold;
 }
 
 .switch-input {
@@ -42,6 +26,13 @@
   transition: background-color 0.35s ease-in-out;
 }
 
+.switch-input.small label {
+  width: 25px;
+  height: 15px;
+  top: -15px;
+  margin-left: 5px;
+}
+
 .switch-input label:after {
   content: '';
   position: absolute;
@@ -54,11 +45,27 @@
   transition: left 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
+.switch-input.small label:after {
+  top: 2.5px;
+  left: 2.5px;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+}
+
 .switch-input input:checked + label {
   background-color: var(--tag-color);
+}
+
+.switch-input.dark input:checked + label {
+  background-color: var(--button-dark-bg);
 }
 
 .switch-input input:checked + label:after {
   left: calc(100% - 5px);
   transform: translateX(-100%);
+}
+
+.switch-input.small input:checked label:after {
+  left: calc(100% - 2.5px);
 }
