--- a/src/components/Me/Navigation/Navbar.css
+++ b/src/components/Me/Navigation/Navbar.css
@@ -1,62 +1,81 @@
-html {
-    height: 100%;
-    background-color: #E0E0E0;
-}
-
 .bar {
-    display: none;
+  display: none;
 }
 
 .sidenav-logo {
-    height: 79px;
-    width: 75px;
+  height: 79px;
+  width: 75px;
 }
 
 .house {
-    height: 55.5px;
-    width: 44px;
+  margin-top: 70px;
 }
 
 .mentors {
-    height: 51.5px;
-    width: 44px;
+  height: 51.5px;
+  width: 44px;
 }
 
 .side-icon {
-    padding-left: 15px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+  padding-left: 15px;
+  margin-bottom: 38px;
 }
 
 .menu-tablet {
-    height: 100%;
-    width: 75px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    overflow-x: hidden;
+  height: 100%;
+  width: 75px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  overflow-x: hidden;
+}
+
+.primary {
+  fill: #69D5B1;
+}
+
+.secondary {
+  fill: #179A6F;
+}
+
+.primary-mentors {
+  fill: #E0E0E0;
+}
+
+.secondary-mentors {
+  fill: #898889;
+}
+
+.icon {
+  flex: 1;
+  text-align: center;
+  width: 44px;
+  vertical-align: top;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
 }
 
 @media all and (max-width: 800px) {
-    .menu-tablet {
-        display: none;
-    }
+  .menu-tablet {
+    display: none;
+  }
 
-    .bar {
-        height: 74px;
-        width: 100%;
-        bottom: 0;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #fff;
-    }
+  .bar {
+    position: fixed;
+    height: 74px;
+    width: 100%;
+    bottom: 0;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+  }
 
-    .icon {
-        flex: 1;
-        text-align: center;
-    }
+  .desc {
+    display: block;
+  }
 }
