use css variables

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   --error-background: #dc3545;
 
   --generic-avatar-color: rgb(155, 155, 155);
+
+  --form-text-default: #4f4f4f;
+  --form-text-placeholder: #898889;
+  --form-text-invalid: #ff5f58;
 }
 
 ::selection {
@@ -25,15 +29,17 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
 }
 
-*, :after, :before {
+*,
+:after,
+:before {
   box-sizing: border-box;
 }
 
@@ -49,15 +55,21 @@ textarea {
   resize: none;
 }
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
-button, input {
+button,
+input {
   overflow: visible;
 }
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
@@ -68,19 +80,22 @@ h3 {
   font-size: 1.28571429rem;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
   line-height: 1.28571429em;
-  margin: calc(2rem - .14285714em) 0 1rem;
+  margin: calc(2rem - 0.14285714em) 0 1rem;
   font-weight: 700;
   padding: 0;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
 
 /* #region toast overrides */
 .Toastify__toast--error {
