fix: icons (fa) + body styles

--- a/src/components/layouts/App/App.css
+++ b/src/components/layouts/App/App.css
@@ -1,6 +1,8 @@
 body {
   font-family: 'Lato', sans-serif;
   overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
 }
 
 .app {
