--- a/src/index.css
+++ b/src/index.css
@@ -99,12 +99,34 @@ code {
 }
 
 /* #region toast overrides */
+.Toastify__toast-container {
+  width: auto;
+  min-width: 320px;
+  max-width: 480px;
+}
+
+.Toastify__toast {
+  gap: 5px;
+  font-size: 16px;
+  line-height: 1.4;
+  border: 1px solid;
+  background: #fff;
+  border-radius: 5px;
+  font-family: inherit;
+  color: rgb(var(--toast-color));
+  box-shadow: inset 0 0 0 1000px rgb(var(--toast-color) / 0.2);
+}
+
 .Toastify__toast--error {
-  background: var(--error-background);
+  --toast-color: 220 53 69;
 }
 
 .Toastify__toast--success {
-  background: var(--success-background);
+  --toast-color: 40 167 69;
+}
+
+.Toastify__close-button {
+  color: inherit;
 }
 /* #endregion */
 
