fix: mentor apply modal cut

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -18,6 +18,8 @@
 }
 
 .modal-container .modal-box {
+  display: flex;
+  flex-direction: column;
   background: #fff;
   min-height: 100px;
   border-radius: 5px;
