--- a/src/components/layouts/App/App.css
+++ b/src/components/layouts/App/App.css
@@ -7,6 +7,9 @@ body {
 
 .app {
   padding-bottom: 50px;
+  /* TODO: remove when the app is ready */
+  overflow: hidden;
+  height: 100vh;
 }
 
 .main-header {
