complete the verification cycle
todo: handle user not verified calls nicely. for example when applying to a mentor. also let the user logout or deleting their account

--- a/netlify/functions-src/functions/email/templates/welcome.html
+++ b/netlify/functions-src/functions/email/templates/welcome.html
@@ -220,12 +220,16 @@
                         text-align: left;
                         word-wrap: break-word;
                       ">
-                      <p style="font-size: 14px; line-height: 140%">
+                      <p style="font-size: 14px; line-height: 140%; text-align: center;">
                         <span style="
                             font-family: verdana, geneva;
                             font-size: 18px;
                             line-height: 25.2px;
-                          ">We're so glad you've joined us. Here is what you can do next:</span>
+                          ">We're so glad you've joined us<br />Please click <a href="{{ url }}">here</a> to verify your email.</span>
+                      </p>
+                      <p>&nbsp;</p>
+                      <p>
+                        More things to do:
                       </p>
                       <ul style="margin-bottom: 0;">
                         <li>
