--- a/netlify/functions-src/functions/email/templates/mentor-application-declined.html
+++ b/netlify/functions-src/functions/email/templates/mentor-application-declined.html
@@ -1,4 +1,4 @@
-<div style="text-align: center; font-size: 18px;">
+<div style="text-align: center; font-size: 18px; line-height: 1.5">
   <table width="100%">
     <tbody>
       <tr>
@@ -29,8 +29,8 @@
     ><br />
     Once you fix the application, please submit it again.
   </p>
-  <pre style="text-align: left;">
-    Reason: <%= reason %>
+  <pre>
+      <%= reason %>
   </pre>
   <table width="100%" style="margin-top: 10px;">
     <tr>
