--- a/netlify/functions-src/functions/email/templates/mentor-application-approved.html
+++ b/netlify/functions-src/functions/email/templates/mentor-application-approved.html
@@ -1,25 +1,25 @@
-<div style="text-align: center; font-size: 18px;">
+<div style="text-align: center; font-size: 18px; line-height: 1.5">
   <table width="100%">
     <tbody>
       <tr>
         <td align="center">
-          <img
-            style="width: 39%; max-width: 234px;"
+          <img style="width: 39%; max-width: 234px;"
             src="http://cdn.mcauto-images-production.sendgrid.net/83a8af126d5ca8ff/ca004f6d-654c-412a-a8a7-43ec9d07a591/600x386.jpg"
-            alt="Illustration"
-          />
+            alt="Illustration" />
         </td>
       </tr>
     </tbody>
   </table>
-  <h1
-    style="font-size: 32px; line-height: 42px; font-weight: normal; color: #69d5b1"
-  >
+  <h1 style="font-size: 32px; line-height: 42px; font-weight: normal; color: #69d5b1">
     <%= name %>, You did it!
-    <br />
-    You're a mentor!
+      <br />
+      You're a mentor!
   </h1>
   <p>
+    The only thing left is to set yourself as available<br />
+    <a href="<%= baseUrl %>/me" target="_blank">in your profile</a>
+    </p>
+    <p>
     Once you've made your way through that list then it's just a matter of time
     before a mentee gets in touch and you'll be on your way to making a real
     difference in someone's career.
@@ -59,18 +59,13 @@
             <li>
               Tweet to the world about your new commitment to bettering
               tomorrow's amazing talent. Don't forget to
-              <a href="https://twitter.com/codingcoach_io" target="_blank"
-                >@codingcoach_io</a
-              >
+              <a href="https://twitter.com/codingcoach_io" target="_blank">@codingcoach_io</a>
               us so we can retweet and give you some reach.
             </li>
             <li>
               Join our
-              <a
-                target="_blank"
-                href="https://join.slack.com/t/coding-coach/shared_invite/zt-15kky1m4x-JrrLzQevCLkdyZiaqT_DTg"
-                >Slack</a
-              >
+              <a target="_blank"
+                href="https://join.slack.com/t/coding-coach/shared_invite/zt-15kky1m4x-JrrLzQevCLkdyZiaqT_DTg">Slack</a>
               so you can chat real-time with other mentors and your mentees
             </li>
             <li>
@@ -79,11 +74,9 @@
             </li>
             <li>
               Have a read over the
-              <a
-                target="_blank"
-                href="https://docs.google.com/document/d/1zKCxmIh0Sd4aWLiQncICOGm6uf38S0kJ0xb0qErNFVA/edit?usp=sharing"
-                >Coding Coach mentorship guidelines</a
-              >
+              <a target="_blank"
+                href="https://docs.google.com/document/d/1zKCxmIh0Sd4aWLiQncICOGm6uf38S0kJ0xb0qErNFVA/edit?usp=sharing">Coding
+                Coach mentorship guidelines</a>
               there are plenty of hints and tips there for both mentors and
               mentees to set your expectations and give you an idea of what the
               journey ahead of you looks like
@@ -91,9 +84,7 @@
             <li>
               We know you have a great amount of development knowledge and skill
               and if you'd care to share it with us then why not join us in
-              <a target="_blank" href="https://github.com/Coding-Coach"
-                >building the coding coach platform?</a
-              >
+              <a target="_blank" href="https://github.com/Coding-Coach">building the coding coach platform?</a>
             </li>
           </ul>
         </td>
