--- a/netlify/functions-src/functions/email/templates/mentor-freeze.html
+++ b/netlify/functions-src/functions/email/templates/mentor-freeze.html
@@ -1,4 +1,4 @@
-<div style="text-align: center; font-size: 18px">
+<div style="text-align: center; font-size: 18px; line-height: 1.5">
   <table width="100%">
     <tbody>
       <tr>
