--- a/netlify/functions-src/functions/email/templates/mentorship-declined.html
+++ b/netlify/functions-src/functions/email/templates/mentorship-declined.html
@@ -1,4 +1,4 @@
-<div style="font-size: 18px">
+<div style="font-size: 18px; line-height: 1.5">
   <table width="100%">
     <tbody>
       <tr>
@@ -26,7 +26,7 @@
     Mentorship Request Not Accepted
   </h1>
 
-  <% if (bySystem) { %>
+  <% if (typeof(bySystem) !="undefined" && bySystem) { %>
   <p>
     Unfortunately, your request for mentorship with
     <span style="font-weight: bold; font-style: italic"><%= mentorName %></span>
